docs/api/qiskit/0.43/qiskit.opflow.state_fns.StateFn.mdx
---
title: StateFn
description: API reference for qiskit.opflow.state_fns.StateFn
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.state_fns.StateFn
---

# StateFn

<Class id="qiskit.opflow.state_fns.StateFn" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/opflow/state_fns/state_fn.py" signature="StateFn(primitive=None, coeff=1.0, is_measurement=False)">
  Bases: [`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")

  Deprecated: A class for representing state functions and measurements.

  State functions are defined to be complex functions over a single binary string (as compared to an operator, which is defined as a function over two binary strings, or a function taking a binary function to another binary function). This function may be called by the eval() method.

  Measurements are defined to be functionals over StateFns, taking them to real values. Generally, this real value is interpreted to represent the probability of some classical state (binary string) being observed from a probabilistic or quantum system represented by a StateFn. This leads to the equivalent definition, which is that a measurement m is a function over binary strings producing StateFns, such that the probability of measuring a given binary string b from a system with StateFn f is equal to the inner product between f and m(b).

  NOTE: State functions here are not restricted to wave functions, as there is no requirement of normalization.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.opflow.state_fns.state_fn.StateFn` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit [https://qisk.it/opflow\_migration](https://qisk.it/opflow_migration).
  </Admonition>

  **Parameters**

  *   **primitive** (*str | dict |* [*Result*](qiskit.result.Result "qiskit.result.result.Result")  *| list |*[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")  *|*[*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.states.statevector.Statevector")  *|*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")  *|*[*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")  *|*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The primitive which defines the behavior of the underlying State function.
  *   **coeff** (*complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – A coefficient by which the state function is multiplied.
  *   **is\_measurement** (*bool*) – Whether the StateFn is a measurement operator

  **Return type**

  [StateFn](#qiskit.opflow.state_fns.StateFn "qiskit.opflow.state_fns.StateFn")

  ## Methods Defined Here

  <span id="qiskit-opflow-state-fns-statefn-add" />

  ### add

  <Function id="qiskit.opflow.state_fns.StateFn.add" name="add" signature="StateFn.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-adjoint" />

  ### adjoint

  <Function id="qiskit.opflow.state_fns.StateFn.adjoint" name="adjoint" signature="StateFn.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-assign-parameters" />

  ### assign\_parameters

  <Function id="qiskit.opflow.state_fns.StateFn.assign_parameters" name="assign_parameters" signature="StateFn.assign_parameters(param_dict)">
    Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

    **Parameters**

    **param\_dict** (*dict*) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

    **Returns**

    The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-compose" />

  ### compose

  <Function id="qiskit.opflow.state_fns.StateFn.compose" name="compose" signature="StateFn.compose(other, permutation=None, front=False)">
    Composition (Linear algebra-style: A\@B(x) = A(B(x))) is not well defined for states in the binary function model, but is well defined for measurements.

    **Parameters**

    *   **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The Operator to compose with self.
    *   **permutation** (*List\[int] | None*) – `List[int]` which defines permutation on other operator.
    *   **front** (*bool*) – If front==True, return `other.compose(self)`.

    **Returns**

    An Operator equivalent to the function composition of self and other.

    **Raises**

    **ValueError** – If self is not a measurement, it cannot be composed from the right.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-equals" />

  ### equals

  <Function id="qiskit.opflow.state_fns.StateFn.equals" name="equals" signature="StateFn.equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` to compare to self.

    **Returns**

    A bool equal to the equality of self and other.

    **Return type**

    bool
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-eval" />

  ### eval

  <Function id="qiskit.opflow.state_fns.StateFn.eval" name="eval" signature="StateFn.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    If `front` is None, the matrix-representation of the operator is returned.

    **Parameters**

    **front** (*str | Dict\[str, complex] |* [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")  *|*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")  *|*[*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.states.statevector.Statevector") *| None*) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function, or None.

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If `front` is None, the matrix-representation of the operator is returned, which is a `MatrixOp` for the operators and a `VectorStateFn` for state-functions. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase") | complex
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-mul" />

  ### mul

  <Function id="qiskit.opflow.state_fns.StateFn.mul" name="mul" signature="StateFn.mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (*complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-permute" />

  ### permute

  <Function id="qiskit.opflow.state_fns.StateFn.permute" name="permute" signature="StateFn.permute(permutation)">
    Permute the qubits of the state function.

    **Parameters**

    **permutation** (*List\[int]*) – A list defining where each qubit should be permuted. The qubit at index j of the circuit should be permuted to position permutation\[j].

    **Returns**

    A new StateFn containing the permuted primitive.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-power" />

  ### power

  <Function id="qiskit.opflow.state_fns.StateFn.power" name="power" signature="StateFn.power(exponent)">
    Compose with Self Multiple Times, undefined for StateFns.

    **Parameters**

    **exponent** (*int*) – The number of times to compose self with self.

    **Raises**

    **ValueError** – This function is not defined for StateFns.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.opflow.state_fns.StateFn.primitive_strings" name="primitive_strings" signature="StateFn.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Returns**

    A set of strings describing the primitives contained within the Operator.

    **Return type**

    *Set*\[str]
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-reduce" />

  ### reduce

  <Function id="qiskit.opflow.state_fns.StateFn.reduce" name="reduce" signature="StateFn.reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Returns**

    The reduced `OperatorBase`.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-sample" />

  ### sample

  <Function id="qiskit.opflow.state_fns.StateFn.sample" name="sample" signature="StateFn.sample(shots=1024, massive=False, reverse_endianness=False)">
    Sample the state function as a normalized probability distribution. Returns dict of bitstrings in order of probability, with values being probability.

    **Parameters**

    *   **shots** (*int*) – The number of samples to take to approximate the State function.
    *   **massive** (*bool*) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.
    *   **reverse\_endianness** (*bool*) – Whether to reverse the endianness of the bitstrings in the return dict to match Terra’s big-endianness.

    **Returns**

    A dict containing pairs sampled strings from the State function and sampling frequency divided by shots.

    **Return type**

    *Dict*\[str, float]
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-tensor" />

  ### tensor

  <Function id="qiskit.opflow.state_fns.StateFn.tensor" name="tensor" signature="StateFn.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, Plus.tensor(Zero) produces a |+⟩ on qubit 0 and a |0⟩ on qubit 1, or |+⟩⨂|0⟩, but would produce a QuantumCircuit like

    > |0⟩– |+⟩–

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` to tensor product with self.

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-tensorpower" />

  ### tensorpower

  <Function id="qiskit.opflow.state_fns.StateFn.tensorpower" name="tensorpower" signature="StateFn.tensorpower(other)">
    Return tensor product with self multiple times, overloaded by `^`.

    **Parameters**

    **other** (*int*) – The int number of times to tensor product self with itself via `tensorpower`.

    **Returns**

    An `OperatorBase` equivalent to the tensorpower of self by other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase") | int
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-to-circuit-op" />

  ### to\_circuit\_op

  <Function id="qiskit.opflow.state_fns.StateFn.to_circuit_op" name="to_circuit_op" signature="StateFn.to_circuit_op()">
    Returns a `CircuitOp` equivalent to this Operator.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-to-density-matrix" />

  ### to\_density\_matrix

  <Function id="qiskit.opflow.state_fns.StateFn.to_density_matrix" name="to_density_matrix" signature="StateFn.to_density_matrix(massive=False)">
    Return matrix representing product of StateFn evaluated on pairs of basis states. Overridden by child classes.

    **Parameters**

    **massive** (*bool*) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.

    **Returns**

    The NumPy array representing the density matrix of the State function.

    **Raises**

    **ValueError** – If massive is set to False, and exponentially large computation is needed.

    **Return type**

    [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.opflow.state_fns.StateFn.to_matrix" name="to_matrix" signature="StateFn.to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.

    **Return type**

    [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-to-matrix-op" />

  ### to\_matrix\_op

  <Function id="qiskit.opflow.state_fns.StateFn.to_matrix_op" name="to_matrix_op" signature="StateFn.to_matrix_op(massive=False)">
    Return a `VectorStateFn` for this `StateFn`.

    **Parameters**

    **massive** (*bool*) – Whether to allow large conversions, e.g. creating a matrix representing over 16 qubits.

    **Returns**

    A VectorStateFn equivalent to self.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-state-fns-statefn-traverse" />

  ### traverse

  <Function id="qiskit.opflow.state_fns.StateFn.traverse" name="traverse" signature="StateFn.traverse(convert_fn, coeff=None)">
    Apply the convert\_fn to the internal primitive if the primitive is an Operator (as in the case of `OperatorStateFn`). Otherwise do nothing. Used by converters.

    **Parameters**

    *   **convert\_fn** (*Callable*) – The function to apply to the internal OperatorBase.
    *   **coeff** (*complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression") *| None*) – A coefficient to multiply by after applying convert\_fn. If it is None, self.coeff is used instead.

    **Returns**

    The converted StateFn.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.state_fns.StateFn.INDENTATION" name="INDENTATION" attributeValue="= '  '" />

  ### coeff

  <Attribute id="qiskit.opflow.state_fns.StateFn.coeff" name="coeff">
    A coefficient by which the state function is multiplied.
  </Attribute>

  ### instance\_id

  <Attribute id="qiskit.opflow.state_fns.StateFn.instance_id" name="instance_id">
    Return the unique instance id.
  </Attribute>

  ### is\_measurement

  <Attribute id="qiskit.opflow.state_fns.StateFn.is_measurement" name="is_measurement">
    Whether the StateFn object is a measurement Operator.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.state_fns.StateFn.num_qubits" name="num_qubits" />

  ### parameters

  <Attribute id="qiskit.opflow.state_fns.StateFn.parameters" name="parameters" />

  ### primitive

  <Attribute id="qiskit.opflow.state_fns.StateFn.primitive" name="primitive">
    The primitive which defines the behavior of the underlying State function.
  </Attribute>

  ### settings

  <Attribute id="qiskit.opflow.state_fns.StateFn.settings" name="settings">
    Return settings.
  </Attribute>
</Class>

